--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,10 @@ body {
 	font-family: Open Sans;
 }
 
+a {
+	text-decoration: none;
+}
+
 .container {
 	width: 1600px;
 	height: 100%;
@@ -77,7 +81,6 @@ body {
 	font-weight: 300;
 	font-size: 13px;
 	color: white;
-	text-decoration: none;
 }
 
 .navigation li a:hover {
@@ -220,7 +223,6 @@ body {
 }
 
 .content-works a {
-	text-decoration: none;
 	color: #062033;
 }
 
@@ -246,10 +248,186 @@ body {
 	margin: 0 auto;
 	margin-top: 110px;
 	width: 1200px;
+	margin-bottom: 610px;
+	height: 100%;
 }
 
 .member {
 	display: inline-block;
 	float: left;
 	padding-left: 30px;
+}
+
+.member-name {
+	font-size: 18px;
+	font-weight: 700;
+	color: #062033;
+	padding-top: 10px;
+}
+
+.member-title {
+	padding-top: 5px;
+	font-weight: 300;
+	font-size: 13px;
+}
+
+#fun-facts-img {
+	position: absolute;
+}
+
+.facts {
+	height: 600px;
+}
+
+.facts-content {
+	position: relative;
+}
+
+.facts-content p {
+	text-align: center;
+}
+
+.discuss p {
+	text-align: center;
+	padding-top: 10px;
+}
+
+#contact-title {
+	text-align: left;
+	font-size: 24px;
+}
+
+.contact-details {
+	width: 245px;
+	float: left;
+	margin-left: 200px;
+	margin-top: 90px;
+}
+
+.contact-details ul {
+	padding-top: 20px;
+}
+
+.contact-details li {
+	list-style-type: none;
+	padding-top: 5px;
+}
+
+.say-hello {
+	float: left;
+	width:  800px;
+	margin-top: 90px;
+}
+
+.say-hello h5 {
+	font-size: 24px;
+	font-weight: 700;
+	padding-top: 10px;
+}
+
+#form-name, #form-email {
+	width: 360px;
+}
+
+#form-email {
+	margin-left: 50px;
+}
+
+#form-message {
+	width: 780px;
+	margin-top: 50px;
+}
+
+input {
+	height: 50px;
+	border: none;
+	border-bottom: 1px solid #ccc;
+	background-color: white;
+
+}
+
+#send {
+	float: right;
+}
+
+#send-message {
+	border: none;
+	padding-left: 10px;
+}
+
+#map img {
+	margin-top: 100px;
+	opacity: 0.3;
+}
+
+.footer {
+	background-color: #1ea78d;
+	height: 400px;
+}
+
+#footer-separator {
+	border: 2px solid #062033;
+}
+
+#footer-content {
+	margin: 0 auto;
+	margin-top: 90px;
+	margin-bottom: 110px;
+	width: 1170px;
+}
+
+.footer-column {
+	float: left;
+	width: 270px;
+}
+
+.footer-column p {
+	padding: 30px 5px;
+	font-size: 13px;
+	color: white;
+	line-height: 25px;
+}
+
+.footer-column h5 {
+	color: white;
+}
+
+#newsletter {
+	margin-top: 40px;
+	background-color: #1ea78d;
+	border-radius: 5px;
+	border: 2px solid white;
+	height: 30px;
+}
+
+.footer-column li {
+	list-style-type: none;
+	padding: 10px 0px;
+	font-size: 13px;
+}
+
+.footer-column li a {
+	color: white;
+}
+
+
+#links1 {
+	float: left;
+}
+
+#links2 {
+	float: left;
+	padding-left: 30px;
+}
+
+#special-link {
+	color: #062033;
+}
+
+#copyright {
+	color: #062033;
+}
+
+.footer-column span img {
+	padding: 0px 10px;
 }
